/*
 *
 *  *  UCF COP3330 Summer 2021 Assignment 4 Solution
 *  *  Copyright 2021 Jose Gonzalez
 *
 */

package ucf.assignments;

import javafx.event.ActionEvent;
import javafx.fxml.FXML;
import javafx.scene.input.ContextMenuEvent;

public class TodoController {
    @FXML
    public void addButtonClicked(ActionEvent actionEvent) {
        // get value added from user
        // include to database
    }

    @FXML
    public void removeButtonClicked(ActionEvent actionEvent) {
        // lookup for value enter by the user
        //
    }

    @FXML
    public void editButtonClicked(ActionEvent actionEvent) {
    }

    @FXML
    public void saveButtonClicked(ActionEvent actionEvent) {
    }

    @FXML
    public void loadButtonClicked(ActionEvent actionEvent) {
    }
}
