/*
 *
 *  *  UCF COP3330 Summer 2021 Assignment 4 Solution
 *  *  Copyright 2021 Jose Gonzalez
 *
 */

/*
Using IntelliJ and Gradle, you will create a GUI-based desktop application to allow a user to manage multiple "todo"-type lists.

For [Part 1] of this assignment, you will focus on the design elements: UML Class Diagrams, GUI mock-ups, and pseudocode.

You will identify and define classes, interfaces, behaviors, and relationships; but, you will not implement any
 of the methods beyond what is required for a successful build.
Your `main()` method should only contain enough code to launch the application.
Your `start()` method should only contain enough code to load your FXML file and display it.
Any methods with a return value should simply return a literal.
Any methods without a return value should contain only pseudocode.


In addition to the assigned readings and videos, you will find the following links useful for this assignment:

https://docs.microsoft.com/en-us/windows/apps/design/ (Links to an external site.)
https://developer.apple.com/design/human-interface-guidelines/macos/overview/themes/ (Links to an external site.)


Directions
Your application shall satisfy the following requirements:

The application shall be able to manage at least 100 unique todo lists

A todo list shall have a title
A todo list shall have the capacity to store at least 100 unique items

An item shall have a description
An item shall have a due date, formatted as YYYY-MM-DD

A user shall be able to add a new todo list
A user shall be able to remove an existing todo list
A user shall be able to edit the title of an existing todo list
A user shall be able to add a new item to an existing todo list
A user shall be able to remove an item from an existing todo list
A user shall be able to edit the description of an item within an existing todo list
A user shall be able to edit the due date of an item within an existing todo list
A user shall be able to mark an item in a todo list as complete
A user shall be able to display all of the existing items in a todo list
A user shall be able to display only the uncompleted items in a todo list
A user shall be able to display only the completed items in a todo list
A user shall be able to save all of the items in a single todo list to external storage
A user shall be able to save all of the items across all of the todo lists to external storage
A user shall be able to load a single todo list that was previously saved to external storage
A user shall be able to load multiple todo lists that were previous saved to external storage

 */

package ucf.assignments;

public class TodoListModel {
    //todo Application

    //function that stores at least 100 items. Including due date, item name, and description(MAP data structure)
    public static void allItems(){
    }

    public static void thisIs(){
    }
    //Include



}
